# angular-projects

./: 04 Conceptos de Angular.docx  PRD.md  Texto para el prd.md  rxjs-paises.js
2021-07-18_py_grocery/: test.py
2021-10-25 Cambiar aspecto a radio/: index.htm  style-v3.css
2021-11-19 ajax-ree/: code.js
2021-11-22b Promesas y async-await. Pokemons corto/: index-promise.htm
20211025 Cambiar aspecto a radio/: style-v1.css  style-v2.css
20211122b Promesas y async-await. Pokemons corto/: index-async-await.htm
20211123 node-energy-production/: Dockerfile
2022-06-20 proyecto_direccion_red/: Direccion.py  aplicacion.py  test.py
2022-07-14 greetings/: oop_v1.py  oop_v2.py
2022-08-19 pokemons-node/: Dockerfile
2022-08-20 ts-express/: package-lock.json  tsconfig.json
2022-08-20 ts-star-wars/: tsconfig.json
2022-09-12 ts-pokemons-hexagonal/: package.json
2022-12 geoformas_algoritmia_no_spa/: code.js  dockerfile  (+7 more)
2025-08-01-mcp/: README.md  ollama_mcp_tutorial.ipynb  pyproject.toml  test_setup.py
2025-08-01-mcp/docs/: INTEGRATION_GUIDE.md
2025-08-01-mcp/examples/: how_to_address_mcp_server.py  mcp_client_examples.py  mcp_communication.py  mcp_integration_patterns.py  ollama_basics.py
2025-08-01-mcp/src/ollama_mcp_trainer/: __init__.py  __main__.py
2025-08-06 Proyecto partes independientes. servidor MCP/mcp-proyect/: MCP_Temperature_Converter_Tutorial.ipynb  README.md  SETUP_INSTRUCTIONS.md  pyproject.toml
2025-08-06 Proyecto partes independientes. servidor MCP/mcp-proyect/src/temperature_converter_mcp/: __init__.py  __init__.py.new  __main__.py
(+882 files in other folders)
